--- a/hal.service
+++ b/hal.service
@@ -4,6 +4,7 @@ Wants=network.target
 After=network.target
 
 [Service]
+User=arcrozier
 ExecStart=/var/www/hal/start.sh
 Restart=always
 RestartSec=10
