--- a/hal.service
+++ b/hal.service
@@ -4,7 +4,7 @@ Wants=network.target
 After=network.target
 
 [Service]
-Group=sysadmin
+User=www-data
 ExecStart=/var/www/hal/start.sh
 Restart=always
 RestartSec=10
