--- a/hal.service
+++ b/hal.service
@@ -4,6 +4,7 @@ Wants=network.target
 After=network.target
 
 [Service]
+Environment="PYTHONPATH=/usr/local/bin"
 User=www-data
 ExecStart=/var/www/hal/start.sh
 Restart=always
