--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-channels~=3.0.2
-Django~=3.1.1
-numpy>=1.19.2
-tensorflow-gpu~=2.6
-regex~=2017.4.5
-tqdm~=4.31.1
-requests~=2.21.0
+channels
+Django
+numpy
+tensorflow-gpu
+regex
+tqdm
+requests
 websockets
 Twisted[tls,http2]
-python-dotenv~=0.18.0
-daphne~=3.0.2
+python-dotenv
+daphne
