--- a/hal.service
+++ b/hal.service
@@ -6,7 +6,7 @@ After=network.target
 [Service]
 User=www-data
 ExecStart=/var/local/apps/hal/start.sh
-Restart=abnormal
+Restart=on-abnormal
 RestartSec=10
 KillMode=mixed
 
